# njords-ledger

./: .gitignore  README.md
.github/workflows/: manual_deploy.yaml  terraform.yaml
backend/analytical-service/: Makefile  README.md  pyproject.toml
backend/analytical-service/.devcontainer/: Dockerfile  devcontainer.env  devcontainer.json
backend/analytical-service/analytics/: config.py  operations.py  process_query.py  query_builder.py  server.py
backend/analytical-service/tests/: conftest.py  constants.py  test_operations.py  test_process_query.py  test_query_builder.py  test_server.py
backend/metadata-service/: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/metadata-service/.devcontainer/: devcontainer.env
backend/metadata-service/docs/: swagger.yml
backend/metadata-service/metadata/: config.py  operations.py  server.py  validations.py
backend/metadata-service/tests/: conftest.py  constants.py  test_operations.py  test_server.py  test_validations.py
terraform/: __backend.tf  __provider.tf  __variables.tf  main.tf
terraform/files/: expenses-bq-table-schema.json  expenses-pubsub-topic-schema.json
