[tool.poetry]
name = "analytics"
version = "0.1.0"
description = "Njord's Ledger analytical service"
authors = ["Miguel Peixoto <miguel.peixoto.99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cerberus = "1.3.4"
flask = "2.3.1"
werkzeug = "2.3.2"
requests = "2.30.0"
google-cloud-bigquery = "^3.11.4"
pyarrow = "^13.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
mock = "~5.0.0"

[tool.poetry.scripts]
analytical_service = "analytics.server:main"

[tool.pytest.ini_options]
addopts = "-v"
filterwarnings = "ignore::DeprecationWarning"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
